PWCT Project/First Generation/Applications/Projects/HarbourPWCT_SupernovaProgrammingLanguage/Samples/Errors/BadRule.nova
Application title = Error.

hello. add from wow. add from nice. add from nice.